--- a/clients/src/main/webapp/iou-list.xhtml
+++ b/clients/src/main/webapp/iou-list.xhtml
@@ -9,6 +9,9 @@
 <ui:composition template="layout.xhtml">
     <ui:define name="content">
         <h:form id="form">
+        	<p:messages id="messages" showDetail="true" closable="true">
+		        <p:autoUpdate />
+		    </p:messages>
             <p:panel header="IOU List">
                 <p:dataTable id="table" var="iouState" value="#{iouList.ious}">
                     <p:column>
