--- a/clients/src/main/webapp/iou-form.xhtml
+++ b/clients/src/main/webapp/iou-form.xhtml
@@ -8,6 +8,9 @@
 <ui:composition template="layout.xhtml">
     <ui:define name="content">
         <h:form id="iouForm">
+        	<p:messages id="messages" showDetail="true" closable="true">
+		        <p:autoUpdate />
+		    </p:messages>
             <p:panel header="IOU Details">
                 <h:panelGrid columns="1">
                     <p:outputLabel for="iouValue" value="IOU Value:" />
